fix: Remove padding from Featured Work heading
The Featured Work heading looked like it had too much padding on the
left hand side compared to the mockup. I didn't remember it looking
that way before.

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ a:link {
 .text-featured {
     font-weight: 400;
     font-size: 2.5em;
-    padding: 0 0 0 25px;
+    padding: 0 0 0 5px;
 }
 
 .url {
